fixed overflow

--- a/src/global.scss
+++ b/src/global.scss
@@ -17,4 +17,5 @@ body {
   font-size: 1rem;
   background-color: $bg;
   font-family: 'Montserrat', sans-serif;
+  overflow-x: clip;
 }
